# esp32-can-aht21-rs

./: .gitignore  Cargo.toml
src/: main.rs
test/: requirements.txt  test.py
